# paired-void-finder

./: .gitignore  AGENTS.md  COPILOT_START.md  README.md  pyproject.toml
.github/: copilot-instructions.md
configs/: algorithm_default.yaml  mock_geometry.yaml  mock_veto.yaml
results/geometry_default/: match_table.csv  mock_used.yaml  summary.txt
results/random_3holes_check/: match_table.csv  mock_used.yaml  summary.txt
scripts/: make_mock.py  plot_mock_diagnostics.py  plot_parameter_scan.py  run_parameter_scan.py  run_swiss_cheese_diagnostics.py  run_void_finder.py  validate_mock.py
src/paired_void_finder/: __init__.py  alpha_shape.py  boundaries.py  catalogs.py  diagnostics.py  graph.py  mocks.py  periodic.py  plotting.py  validation.py  veto.py  voids.py
tests/: test_acceptance.py  test_alpha_shape.py  test_diagnostics.py  test_mock.py  test_parameter_scan.py  test_periodic.py  test_pipeline_mock.py  test_validation.py  test_veto.py
